fix extra padding on unseen notifications

--- a/ui/scss/component/menu-button.scss
+++ b/ui/scss/component/menu-button.scss
@@ -96,7 +96,6 @@
 .menu__link--notification {
   display: flex;
   align-items: flex-start;
-  padding: var(--spacing-s);
 
   .icon__wrapper {
     height: 2.5rem;
